# cggd-course

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_shaders.bat  compile_shaders.sh
shaders/: shader.vert
src/: CMakeLists.txt  VulkanDebug.h  VulkanDevice.h  VulkanExampleBase.cpp  VulkanInitializers.hpp  VulkanSwapChain.hpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp  imgui.h  main.cpp  offscreen.cpp  ui.hpp  vulkanexamplebase.h
